--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
+		"@types/react-slick": "^0.23.5",
 		"axios": "^0.21.1",
 		"axios-mock-adapter": "^1.19.0",
 		"lodash": "^4.17.21",
@@ -20,7 +21,9 @@
 		"react-query": "^3.19.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"react-slick": "^0.28.1",
 		"recoil": "^0.3.1",
+		"slick-carousel": "^1.8.1",
 		"styled-components": "^5.3.0",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1"
@@ -62,7 +65,6 @@
 		]
 	},
 	"devDependencies": {
-		"storybook": "^6.3.5",
 		"@storybook/addon-actions": "^6.3.5",
 		"@storybook/addon-essentials": "^6.3.5",
 		"@storybook/addon-links": "^6.3.5",
@@ -72,6 +74,7 @@
 		"@types/lodash": "^4.14.171",
 		"@types/react-router-dom": "^5.1.8",
 		"@types/styled-components": "^5.1.11",
+		"storybook": "^6.3.5",
 		"storybook-addon-styled-component-theme": "^2.0.0",
 		"storybook-react-router": "^1.0.8"
 	}
